bynkc/tests/fixtures/positive/254_multi_file_commons_workers_codec/src/money/label.bynk
commons money {
  fn label() -> String {
    "cents"
  }
}
