bynkc/tests/fixtures/negative/296_is_literal_pattern/input.bynk
commons demo {
  fn f(x: Int) -> Bool {
    x is 31
  }
}
